--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^2.0.2",
+    "sanitize-filename": "^1.6.3",
     "ws": "^8.18.3"
   }
 }
